--- a/view.html
+++ b/view.html
@@ -15,8 +15,8 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1>Friend Finder, the friend finding app (just like the name suggests)</h1>
-            <h3>for people who dont like to waste time finding friends the natural way!. Just click the button below, answer a few questions, and never be lonely again!</h3>
+            <h1>Friend Finder, the friend finding app </h1>
+            <h3>For people who dont like to waste time finding friends. Just click the button below, answer a few questions, and never be lonely again!</h3>
             <hr>
             <a href="/add">
             <button type="button" class="btn btn-danger btn-lg">
